--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,5 @@ $RECYCLE.BIN/
 #####
 *.dll
 test/fixtures/files/test_excel_simplefilecontent.csv
+test/fixtures/files/testgenerated_file_Basic_Excel_2cells.csv
+test/fixtures/files/testgenerated_file_Basic_Excel_2cells.xlsx
