--- a/dot_net_doc_gen_unit_Testing/GenDocUnitTesting/GenDocUnitTesting/GenDocUnitTesting.csproj
+++ b/dot_net_doc_gen_unit_Testing/GenDocUnitTesting/GenDocUnitTesting/GenDocUnitTesting.csproj
@@ -53,6 +53,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.XML" />
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <Choose>
