parsing list of range updates & values and put into excel

--- a/.gitignore
+++ b/.gitignore
@@ -192,6 +192,4 @@ $RECYCLE.BIN/
 # End of core ignore list, below put you custom 'per project' settings (patterns or path)
 #####
 *.dll
-test/fixtures/files/test_excel_simplefilecontent.csv
-test/fixtures/files/testgenerated_file_Basic_Excel_2cells.csv
-test/fixtures/files/testgenerated_file_Basic_Excel_2cells.xlsx
+testgenerated*.*
